
BUGFIX:
* UTIL type=device | actions=securityprofile-create-alert-only - bugfix for PAN-OS 8.1 - including fix for ironskillet download
* class PanoramaConf | bugfix to handle initial PAN-OS panorama config files

GENERAL:
* framework - update predefined to version 8519-7206
* update install scripts as for example ubuntu installation is only working correctly if root user is used


2.0.28 (20220124)
UTILS:
* UTIL pan-os-php type=device | introduce PAN-OS API for actions=devicegroup-create / template-create
* UTIL pan-os-php type=device | introduce actions=template-delete
* UTIL development | introduce visibility_playbook.php
* UTIL pan-os-php type=device | move to iron-skilett usage for actions=securityprofile-create-alert-only / logforwardingprofile-create-bp / zoneprotectionprofile-create-bp
* UTIL ironskillet_update | disable SSL check
* UTIL pan-os-php | extend for type=playbook / ironskillet-update / maxmind-update / util_get-action-filter
* UTIL main entry pan-os-php script | start removing old single scripts maxmind / ironskillet / util_get-action-filter
* UTIL pan-os-php type=playbook | introduce PAN-OS API as argument in=api://
* UTIL system-log / traffic-log / software-remove / sendGARP - move to PHP classes
* UTIL pa_software-download / pa_software-preparation / pa_license move to PHP class - to make it useable for entry point pan-os-php type=
* UTIL API - improve error output for supported endpoints
* UTIL pan-os-php type=config-download-all | introduce type and move feature from development into php class
* UTIL UI update json_array.js to get actual info about script actions / filter
* UTIL get_action_filter | improve
* UTIL UI - extension for playbook JSON file reading and creation
* UTIL type=zone | introduce new 'filter=(zpp is.set) / (zpp is PROFILNAME)'
* UTIL type=address new 'actions=(description-replace-character:OLDone,NEWone )'
* UTIL UI update playground
* UTIL pan-os-php type=tag-merger | introduce dupalgorithm=samename